fix: Prevent input field zooming behaviour on mobile

--- a/src/components/SearchBar/SearchBar.module.scss
+++ b/src/components/SearchBar/SearchBar.module.scss
@@ -61,6 +61,11 @@
             text-align: center;
           }
         }
+
+        & textarea {
+          font-size: 16px;
+          -webkit-text-size-adjust: 100%;
+        }
       }
 
       &__button {
